# src/Hedwig/ClientApp/src/OAS-generated/apis/HedwigApi.ts
@@ -1,5 +1,5 @@
-/* tslint:disable */
-/* eslint-disable */
+// tslint:disable
+// eslint-disable
 /**
  * Hedwig API
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
@@ -15,6 +15,9 @@
 
 import * as runtime from '../runtime';
 import {
+    CdcReport,
+    CdcReportFromJSON,
+    CdcReportToJSON,
     Child,
     ChildFromJSON,
     ChildToJSON,
@@ -362,7 +365,7 @@ export class HedwigApi extends runtime.BaseAPI {
 
     /**
      */
-    async apiOrganizationsOrgIdReportsIdGetRaw(requestParameters: ApiOrganizationsOrgIdReportsIdGetRequest): Promise<runtime.ApiResponse<Report>> {
+    async apiOrganizationsOrgIdReportsIdGetRaw(requestParameters: ApiOrganizationsOrgIdReportsIdGetRequest): Promise<runtime.ApiResponse<CdcReport>> {
         if (requestParameters.id === null || requestParameters.id === undefined) {
             throw new runtime.RequiredError('id','Required parameter requestParameters.id was null or undefined when calling apiOrganizationsOrgIdReportsIdGet.');
         }
@@ -390,12 +393,12 @@ export class HedwigApi extends runtime.BaseAPI {
             query: queryParameters,
         });
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => ReportFromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => CdcReportFromJSON(jsonValue));
     }
 
     /**
      */
-    async apiOrganizationsOrgIdReportsIdGet(requestParameters: ApiOrganizationsOrgIdReportsIdGetRequest): Promise<Report> {
+    async apiOrganizationsOrgIdReportsIdGet(requestParameters: ApiOrganizationsOrgIdReportsIdGetRequest): Promise<CdcReport> {
         const response = await this.apiOrganizationsOrgIdReportsIdGetRaw(requestParameters);
         return await response.value();
     }
