# swagger.json
@@ -880,17 +880,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Report"
+                  "$ref": "#/components/schemas/CdcReport"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Report"
+                  "$ref": "#/components/schemas/CdcReport"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Report"
+                  "$ref": "#/components/schemas/CdcReport"
                 }
               }
             }
@@ -1735,6 +1735,44 @@
       "Report": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "type": {
+            "$ref": "#/components/schemas/FundingSource"
+          },
+          "reportingPeriodId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "reportingPeriod": {
+            "$ref": "#/components/schemas/ReportingPeriod"
+          },
+          "submittedAt": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "CdcReport": {
+        "required": [
+          "accredited"
+        ],
+        "type": "object",
+        "properties": {
+          "accredited": {
+            "type": "boolean"
+          },
+          "organizationId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "organization": {
+            "$ref": "#/components/schemas/Organization"
+          },
           "id": {
             "type": "integer",
             "format": "int32"
